--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.nastysloper</groupId>
-  <artifactId>totem-pole</artifactId>
+  <artifactId>super-cats</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>totem-pole Maven Webapp</name>
+  <name>SuperCats Maven Webapp</name>
   <url>http://localhost:8000</url>
 
   <properties>
@@ -88,7 +88,7 @@
   </dependencies>
 
   <build>
-    <finalName>totem-pole</finalName>
+    <finalName>super-cats</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
